# best_name

./: AGENTS.md  README.md  best_name_core.py  config.yaml  conventions.md  main.py  package-lock.json  pyproject.toml  run_tests.sh  system_prompt.md  test_results.md
best_name/: __init__.py  cli.py  conventions.md  system_prompt.md
test/: test_file_03.xlsx  test_file_09.docx  test_file_11.py
test_files/: test_file_13.epub
